--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -9,13 +9,26 @@
         <script type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
     </head>
     <body id="body" class="flex-v-space lobby"> 
-        <h1 class="heading subheading">THE NAME GAME</h1>
+        <h1 id="heading" class="heading subheading">THE NAME GAME</h1>
 
+        <div class="flex-v">
+            <h1 id="round" class="heading subheading">
+                {% if game_deets['round'] == 1 %}
+                    Round 1: Unlimited
+                {% elif game_deets['round'] == 2 %}
+                    Round 2: 3 Words Max
+                {% elif game_deets['round'] == 3 %}
+                    Round 3: 1 Word Only
+                {% elif game_deets['round'] == 4 %}
+                    Round 4: Mime
+                {% endif %}
+            </h1>
+        </div>
         
         <div class="flex-v">
             <h1 id="the_name" class=" heading subheading pad-10pct-v name_big">&nbsp;</h1>
-            <button id="done_button" class="button1 invisible" onclick="done()" disabled>Done</button>
-            <h1 class="heading subheading" id="countdown">{{game_deets['time_limit']}}</h1>
+            <button id="done_button" class="button1 invisible" onclick="done()" disabled>They Guessed It</button>
+            <h1 id="countdown" class="heading subheading">{{game_deets['time_limit']}}</h1>
         </div>
 
         <div id="whos_up" class="flex-v pad-10pct">
@@ -35,6 +48,17 @@
         var socket
         var current_name
         var previous_name
+        var interval
+        var current_turn_user_id
+        var current_team_id
+        var teams
+        var players
+        var my_turn = false
+        var start_mp3
+        var finish_mp3
+        var current_round = parseInt("{{game_deets['round']}}")
+        var audio1 = new Audio(`/static/start/0.mp3`);
+        var audio2 = new Audio(`/static/stop/0.mp3`);
 
         $(document).ready(function(){
             socket = io.connect(window.origin, {query:"game_id={{game_id}}"})
@@ -45,12 +69,16 @@
             }) 
 
             socket.on('emit_next_name',function(name_data) {
+                if (name_data == "no more names"){
+                    concede(false)
+                }
                 document.getElementById("the_name").innerHTML = name_data['name']
+                current_name = name_data
             })
 
             socket.on('your_turn',function(msg) {
                 if (!my_turn){
-
+                    your_turn()
                 }
             })
 
@@ -66,72 +94,119 @@
                 }
             }) 
 
-            socket.on('emit_teams',function(msg) {
-                teams = msg
+            socket.on('emit_teams',function(msg) { teams = msg }) 
+
+            socket.on('emit_players',function(msg) { players = msg[0] }) 
+
+            socket.on('emit_current_round',function(msg) { 
+                current_round = msg
+                round_texts = {1:'Round 1: Unlimited',2:'Round 2: 3 Words Max',3:'Round 3: 1 Word Only',4:'Round 4: Mime'}
+                document.getElementById("round").innerHTML = round_texts[msg]
+                
             }) 
 
-            socket.on('emit_players',function(msg) {
-                players = msg[0]
+            socket.on('start_timer',function(msg) {
+                if(!my_turn){
+                    var count = parseInt("{{game_deets['time_limit']}}")
+                    interval = setInterval(function(){
+                        document.getElementById('countdown').innerHTML=count;
+                        count--;
+                        if (count <= -1){
+                            document.getElementById('countdown').innerHTML='0';
+                            clearInterval(interval);
+                        }
+                    }, 1000)
+                }
+            })
+
+            socket.on('stop_timer',function(msg) { 
+                console.log('stop_timer')
+                document.getElementById('countdown').innerHTML='0';
+                clearInterval(interval) 
+            }) 
+
+            socket.on('get_mp3_number',function(msg) {
+                start_or_stop = msg['start_or_stop']
+                if(start_or_stop==="start"){
+                    start_mp3 = msg['mp3_number']
+                    audio1 = new Audio(`/static/start/${start_mp3}.mp3`);
+                }
+                if(start_or_stop==="stop"){
+                    stop_mp3 = msg['mp3_number']
+                    audio2 = new Audio(`/static/stop/${stop_mp3}.mp3`);
+                }
+                
             }) 
 
             socket.emit("emit_teams","{{game_id}}","{{user_id}}")
             socket.emit("emit_players","{{game_id}}","{{user_id}}")
             socket.emit("emit_current_turn","{{game_id}}","{{user_id}}")
+            socket.emit("emit_current_round","{{game_id}}","{{user_id}}")
             
         })
 
-        var current_turn_user_id
-        var current_team_id
-        var teams
-        var players
-        var my_turn = false
+
+        function score_answer(name_id, is_success){
+            socket.emit("score_answer","{{game_id}}","{{user_id}}",name_id,is_success)
+        }
 
         function your_turn() {
             my_turn = true
+            socket.emit("get_mp3_number","{{user_id}}","start")
+            socket.emit("get_mp3_number","{{user_id}}","stop")
             document.getElementById("start_button").removeAttribute("disabled")
-            document.getElementById("concede_button").removeAttribute("disabled")
             document.getElementById("body").classList.add("myturn-background")
             document.getElementById("whos_up").classList.add("invisible")
-            document.getElementById("done_button").classList.remove("invisible")
-            
         }
 
         function start() {
             document.getElementById("start_button").setAttribute("disabled",'')
             document.getElementById("done_button").removeAttribute("disabled")
-            socket.emit("emit_next_name","{{game_id}}","{{user_id}}")
-            // var audio = new Audio('static/321youreback/ttsMP3.com_VoiceText_2022-5-29_14_5_0.mp3');
-            // audio.play();
-            var count = parseInt("{{game_deets['time_limit']}}")
-            socket.emit("start_timer",count)
-            var interval = setInterval(function(){
-                document.getElementById('countdown').innerHTML=count;
-                count--;
-                if (count <= -1){
-                    document.getElementById('countdown').innerHTML='0';
-                    end_turn()
-                    clearInterval(interval);
+            audio1.addEventListener('ended', function(){
+                socket.emit("emit_next_name","{{game_id}}","{{user_id}}")
+                document.getElementById("concede_button").removeAttribute("disabled")
+                document.getElementById("done_button").classList.remove("invisible")
+                var count = parseInt("{{game_deets['time_limit']}}")
+                socket.emit("start_timer","{{game_id}}")
+                interval = setInterval(function(){
+                    document.getElementById('countdown').innerHTML=count;
+                    count--;
+                    if (count <= -1){
+                        document.getElementById('countdown').innerHTML='0';
+                        end_turn()
+                        clearInterval(interval);
                 }
             }, 1000)
+            })
+            audio1.play()
         }
 
         function done() {
-            //score name as successful
+            score_answer(current_name['name_id'], is_success=1)
+            previous_name = current_name
             socket.emit("emit_next_name","{{game_id}}","{{user_id}}")
         }
 
-        function end_turn() {
+        function end_turn(to_score=true) {
             my_turn = false
-            //score current name as unsuccessful
+            audio2.play()
+            if (to_score){score_answer(current_name['name_id'], is_success=0)}
+            socket.emit('advance_turn',"{{game_id}}","{{user_id}}")
             document.getElementById("the_name").innerHTML = "&nbsp;"
             document.getElementById("start_button").setAttribute("disabled",'')
             document.getElementById("concede_button").setAttribute("disabled","")
             document.getElementById("body").classList.remove("myturn-background")
             document.getElementById("whos_up").classList.remove("invisible")
             document.getElementById("done_button").classList.add("invisible")
-            socket.emit("advance_turn","{{game_id}}","{{user_id}}")
+            
         }
-        function concede() {end_turn()}
+        function concede(to_score=true) {
+            socket.emit('stop_timer',"{{game_id}}")
+            document.getElementById('countdown').innerHTML='0';
+            end_turn(to_score)
+            clearInterval(interval)
+            if (to_score){console.log("conceded")}
+        }
 
     </script>
 </html>
