--- a/static/style.css
+++ b/static/style.css
@@ -184,6 +184,7 @@ table, th, td, tr {
 .invisible{visibility:hidden}
 .name_big{font-size:8vw}
 .myturn-background{background-color:rgb(251, 62, 62)}
+.myteam-background{background-color:rgb(255, 200, 0)}
 
 
 
