--- a/templates/create-game.html
+++ b/templates/create-game.html
@@ -31,15 +31,15 @@
                 <h1 class="heading subheading2">ROUNDS</h2>
                 <div class="flex-h-left margin-v">
                     <label class="switch"><input type="checkbox" id='round1' name="round1" checked=True><span class="slider round"></span></label>
-                    <label for="round1">Round 1: &nbsp; No Limits</label>
+                    <label for="round1">Round 1: &nbsp; Unlimited</label>
                 </div>
                 <div class="flex-h-left margin-v">
                     <label class="switch"><input type="checkbox" id='round2' name="round2" checked=True><span class="slider round"></span></label>
-                    <label for="round2">Round 2: &nbsp; 3 Words</label>
+                    <label for="round2">Round 2: &nbsp; 3 Words Max</label>
                 </div>
                 <div class="flex-h-left margin-v">
                     <label class="switch"><input type="checkbox" id='round3' name="round3" checked=True><span class="slider round"></span></label>
-                    <label for="round3">Round 3: &nbsp; 1 Word</label>
+                    <label for="round3">Round 3: &nbsp; 1 Word Only</label>
                 </div>
                 <div class="flex-h-left margin-v">
                     <label class="switch"><input type="checkbox" id='round4' name="round4" checked=True><span class="slider round"></span></label>
