--- a/templates/write-names.html
+++ b/templates/write-names.html
@@ -8,7 +8,7 @@
         <script src="{{ url_for('static',filename='jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
     </head>
-    <body class="flex-v-start lobby"> 
+    <body class="lobby"> 
         <h1 class="heading subheading">WRITE {{game_deets['number_names']}} NAMES</h1>
        
         <div class="flex-v form pad-10pct">
@@ -23,8 +23,12 @@
                 </div>
             </div>
         </div>
+
+        <h1 id="waiting-on" class="heading subheading2">Waiting on: &nbsp;</h1>
+
         <div class="flex-h mar-1em">
             <button class="button1" onclick="submit_names()">Submit</button>
+            <!-- TODO: disable start game button until all players have submitted names, and show list of players that haven't submitted names yet -->
             <button class="button1" onclick="advance_game()">Start Game</button>
         </div>
         <div class="flex-h mar-1em">
@@ -32,26 +36,43 @@
         </div>
     </body>
     <script>
-
+        var socket
+        var waiting_on_list
         $(document).ready(function(){
-            var socket = io.connect(window.origin, {query:"game_id={{game_id}}"})
+            socket = io.connect(window.origin, {query:"game_id={{game_id}}"})
 
             socket.on('advance_game_emit',function(msg) {
                 alert("game started")
                 location.href='/name_game/{{game_id}}';
             }) 
+
+            socket.on('who_hasnt_written_name',function(who_hasnt) {
+                waiting_on_list = []
+                for(var player of who_hasnt) { waiting_on_list.push(player.username) }
+                document.getElementById('waiting-on').innerHTML = (waiting_on_list.length === 0) ? "Ready" : `Waiting on: &nbsp;${waiting_on_list.join(", &nbsp;")}`; 
+            }) 
+
+            socket.emit('who_hasnt_written_name',"{{game_id}}","{{user_id}}")
         })
 
 
         function submit_names(){
             const number_names = parseInt("{{game_deets['number_names']}}")
             var names = []
+            //check for singlequotes
+            for(var i=0; i<number_names; i++) {
+                var val = document.getElementById(`name_input${i}`).value
+                if(val.includes("'")){alert(`Single quote character (') is not allowed. Name #${i+1}: ${val}`);return}
+            }
+
             for(var i=0; i<number_names; i++) {
                 var elem = document.getElementById(`name_input${i}`)
                 var val = elem.value
                 elem.value = ""
                 elem.setAttribute('disabled','')
-                if (val !== ""){names.push(val)}
+                if (val !== ""){
+                    names.push(val)
+                }
             }
             if (names.length !== 0){
                 fetch("/submit_names",{
@@ -68,6 +89,7 @@
 
 
         function advance_game(){
+            if(waiting_on_list.length > 0) {alert(`waiting on players:  ${waiting_on_list.join(",  ")}`);return}
             if (confirm("do you want to start")){
                 fetch("/advance_game",{
                     method:"POST", 
