--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,5 +14,6 @@
         <button class="button1" onclick="location.href='create_game';">Create Game</button>
         <button class="button1" onclick="location.href='join_game';">Join Game</button>
     </body>
+    <a href="{{ url_for('readme') }}">Readme</a>
 </html>
         
